# system4-lsp

./: .gitmodules  .ocamlformat  .ocamlformat-ignore  README.md  dune  dune-project  system4_lsp.opam
.github/workflows/: build.yml
lib/: document.ml  document.mli  dune  hover.ml  project.ml  project.mli  requestHandlers.ml  types.ml  workspace.ml
lib/sys4c/: ain.ml  ain.mli  builtin.ml  builtin.mli  bytecode.ml  cBuffer.ml  compileError.ml  compileError.mli  declarations.ml  dune  jaf.ml  lexer.mll  parser.mly  sjis.ml  sjis.mli  typeAnalysis.ml  utfSjis.ml  utfSjis.mli
test/: dune  test.ml
